# block-police

./: .env.example  .gitignore  BANKER_README.md  BLOCK_POLICE_README.md  FLOW.md  Flows.md  MCP_IMPLEMENTATION_GUIDE.md  README.md  __init__.py  agent.py  agent_refactored.py  alchemy_tools.py  block_police_agent.py  hedera_mcp_examples.md  hedera_query.py  hedera_token_operations.py  hedera_transactions.py  knowledge_graph_implementation.md  pyproject.toml  requirements.txt  simple_test.py  test_banker.py  test_block_police.py  test_deal_acceptance.py  test_ens_integration.py  test_mcp_direct.py  test_token_api.py
config/: __init__.py
mcp/: __init__.py  base.py  registry.py
mcp/client/: __init__.py  sse.py  stdio.py
mcp/clients/: __init__.py  alchemy.py  thegraph.py
mcp/metta/: knowledge_base.py  rag.py
mcps/: __init__.py  base.py  network.py
mcps/client/: __init__.py
mcps/clients/: __init__.py  alchemy.py  hedera.py  thegraph.py
mcps/metta/: __init__.py  enhanced_rag.py  knowledge_graph.py
metta/: banker_rag.py  investment_rag.py  knowledge.py  utils.py
tools/: __init__.py  ens.py  registry.py  token.py
