[project]
name = "block-police"
version = "0.1.0"
description = "Blockchain investigator agent for tracing EVM transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "uagents>=0.22.9",
    "uagents-core>=0.3.9",
    "mcp",
    "httpx",
    "gql[all]>=3.5.3",
    "mcp[cli]>=1.9.4",
    "hyperon>=0.2.6"
]
